# discord_personality_check

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fix_ssl.sh  fly.toml  pyproject.toml  requirements.txt  run.sh  setup.sh  sync.sh  test_modular_setup.py  test_setup.py
data/: personality_profiles.yaml  questions.yaml
docs/plans/: 2025-11-06-modular-command-system-design.md
src/: __init__.py  database.py  main.py  models.py  personality.py  sync_db.py
src/analytics/: __init__.py  messages.py
src/commands/: __init__.py  slash_commands.py  text_commands.py
